--- a/DigitalOcean.API/DigitalOcean.API.csproj
+++ b/DigitalOcean.API/DigitalOcean.API.csproj
@@ -32,11 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp">
+    <Reference Include="RestSharp, Version=104.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,26 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clients\ActionsClient.cs" />
+    <Compile Include="Clients\Connection.cs" />
+    <Compile Include="Clients\IActionsClient.cs" />
     <Compile Include="DigitalOceanClient.cs" />
     <Compile Include="Exceptions\ApiException.cs" />
-    <Compile Include="Helpers\RestSharpExtensions.cs" />
+    <Compile Include="Helpers\Paginated.cs" />
+    <Compile Include="Helpers\RateLimit.cs" />
+    <Compile Include="Extensions\RestSharpExtensions.cs" />
+    <Compile Include="Models\Responses\Action.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requests\DomainsClient.cs" />
-    <Compile Include="Requests\DropletsClient.cs" />
-    <Compile Include="Requests\EventsClient.cs" />
-    <Compile Include="Requests\ImagesClient.cs" />
-    <Compile Include="Requests\RegionsClient.cs" />
-    <Compile Include="Requests\Request.cs" />
-    <Compile Include="Requests\SizesClient.cs" />
-    <Compile Include="Requests\SshKeysClient.cs" />
-    <Compile Include="Responses\Domains.cs" />
-    <Compile Include="Responses\Droplets.cs" />
-    <Compile Include="Responses\Events.cs" />
-    <Compile Include="Responses\Images.cs" />
-    <Compile Include="Responses\Regions.cs" />
-    <Compile Include="Responses\Sizes.cs" />
-    <Compile Include="Responses\SshKeys.cs" />
-    <Compile Include="Responses\Status.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
