Expose rate limits

--- a/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Factory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActionsTest.cs" />
+    <Compile Include="RateLimitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
