--- a/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActionsTest.cs" />
     <Compile Include="RateLimitTest.cs" />
+    <Compile Include="DomainRecordsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
