--- a/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
@@ -62,10 +62,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Clients\DomainsTest.cs" />
+    <Compile Include="Clients\DropletActionsTest.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clients\ActionsTest.cs" />
-    <Compile Include="Helpers\RateLimitTest.cs" />
     <Compile Include="Clients\DomainRecordsTest.cs" />
   </ItemGroup>
   <ItemGroup>
