--- a/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
@@ -61,12 +61,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Clients\DomainsTest.cs" />
-    <Compile Include="Clients\DropletActionsTest.cs" />
+    <Compile Include="Clients\DomainsClientTest.cs" />
+    <Compile Include="Clients\DropletActionsClientTest.cs" />
+    <Compile Include="Clients\DropletsClientTest.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Clients\ActionsTest.cs" />
-    <Compile Include="Clients\DomainRecordsTest.cs" />
+    <Compile Include="Clients\ActionsClientTest.cs" />
+    <Compile Include="Clients\DomainRecordsClientTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
