--- a/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Clients\DropletActionsClientTest.cs" />
     <Compile Include="Clients\DropletsClientTest.cs" />
     <Compile Include="Clients\ImageActionsClientTest.cs" />
+    <Compile Include="Clients\ImagesClientTest.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clients\ActionsClientTest.cs" />
