implement Keys API

--- a/DigitalOcean.API/DigitalOcean.API.csproj
+++ b/DigitalOcean.API/DigitalOcean.API.csproj
@@ -62,8 +62,10 @@
     <Compile Include="Clients\IDropletsClient.cs" />
     <Compile Include="Clients\IImageActionsClient.cs" />
     <Compile Include="Clients\IImagesClient.cs" />
+    <Compile Include="Clients\IKeysClient.cs" />
     <Compile Include="Clients\ImageActionsClient.cs" />
     <Compile Include="Clients\ImagesClient.cs" />
+    <Compile Include="Clients\KeysClient.cs" />
     <Compile Include="Http\Connection.cs" />
     <Compile Include="Clients\IActionsClient.cs" />
     <Compile Include="DigitalOceanClient.cs" />
@@ -79,12 +81,14 @@
     <Compile Include="Models\Requests\DomainRecord.cs" />
     <Compile Include="Models\Requests\Droplet.cs" />
     <Compile Include="Models\Requests\Image.cs" />
+    <Compile Include="Models\Requests\Key.cs" />
     <Compile Include="Models\Responses\Action.cs" />
     <Compile Include="Models\Responses\Domain.cs" />
     <Compile Include="Models\Responses\DomainRecord.cs" />
     <Compile Include="Models\Responses\Droplet.cs" />
     <Compile Include="Models\Responses\Image.cs" />
     <Compile Include="Models\Responses\Kernel.cs" />
+    <Compile Include="Models\Responses\Key.cs" />
     <Compile Include="Models\Responses\Network.cs" />
     <Compile Include="Models\Responses\Pagination.cs" />
     <Compile Include="Models\Responses\Region.cs" />
