--- a/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DigitalOcean.API.Tests.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Clients\ImageActionsClientTest.cs" />
     <Compile Include="Clients\ImagesClientTest.cs" />
     <Compile Include="Clients\KeysClientTest.cs" />
+    <Compile Include="Clients\RegionsClientTest.cs" />
+    <Compile Include="Clients\SizesClientTest.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clients\ActionsClientTest.cs" />
