--- a/DigitalOcean.API/DigitalOcean.API.csproj
+++ b/DigitalOcean.API/DigitalOcean.API.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Models\Responses\Region.cs" />
     <Compile Include="Models\Responses\Size.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Responses\DropletUpgrade.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
