--- a/DigitalOcean.API/DigitalOcean.API.csproj
+++ b/DigitalOcean.API/DigitalOcean.API.csproj
@@ -1,118 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{501971B1-C59F-4583-A4E3-2109C67B644C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalOcean.API</RootNamespace>
-    <AssemblyName>DigitalOcean.API</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="RestSharp">
-      <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
-    </Reference>
+    <Compile Include="**\*.cs" />
+    <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clients\ActionsClient.cs" />
-    <Compile Include="Clients\DomainRecordsClient.cs" />
-    <Compile Include="Clients\DomainsClient.cs" />
-    <Compile Include="Clients\DropletActionsClient.cs" />
-    <Compile Include="Clients\DropletsClient.cs" />
-    <Compile Include="Clients\IDomainRecordsClient.cs" />
-    <Compile Include="Clients\IDomainsClient.cs" />
-    <Compile Include="Clients\IDropletActionsClient.cs" />
-    <Compile Include="Clients\IDropletsClient.cs" />
-    <Compile Include="Clients\IImageActionsClient.cs" />
-    <Compile Include="Clients\IImagesClient.cs" />
-    <Compile Include="Clients\IKeysClient.cs" />
-    <Compile Include="Clients\ImageActionsClient.cs" />
-    <Compile Include="Clients\ImagesClient.cs" />
-    <Compile Include="Clients\IRegionsClient.cs" />
-    <Compile Include="Clients\ISizesClient.cs" />
-    <Compile Include="Clients\ITagsClient.cs" />
-    <Compile Include="Clients\KeysClient.cs" />
-    <Compile Include="Clients\RegionsClient.cs" />
-    <Compile Include="Clients\SizesClient.cs" />
-    <Compile Include="Clients\TagsClient.cs" />
-    <Compile Include="Http\Connection.cs" />
-    <Compile Include="Clients\IActionsClient.cs" />
-    <Compile Include="DigitalOceanClient.cs" />
-    <Compile Include="Exceptions\ApiException.cs" />
-    <Compile Include="Http\IConnection.cs" />
-    <Compile Include="Http\IRateLimit.cs" />
-    <Compile Include="Helpers\JsonNetSerializer.cs" />
-    <Compile Include="Http\RateLimit.cs" />
-    <Compile Include="Extensions\RestSharpExtensions.cs" />
-    <Compile Include="IDigitalOceanClient.cs" />
-    <Compile Include="Models\Requests\Action.cs" />
-    <Compile Include="Models\Requests\Domain.cs" />
-    <Compile Include="Models\Requests\DomainRecord.cs" />
-    <Compile Include="Models\Requests\Droplet.cs" />
-    <Compile Include="Models\Requests\Image.cs" />
-    <Compile Include="Models\Requests\Key.cs" />
-    <Compile Include="Models\Requests\Tag.cs" />
-    <Compile Include="Models\Requests\TagResource.cs" />
-    <Compile Include="Models\Responses\Action.cs" />
-    <Compile Include="Models\Responses\Domain.cs" />
-    <Compile Include="Models\Responses\DomainRecord.cs" />
-    <Compile Include="Models\Responses\Droplet.cs" />
-    <Compile Include="Models\Responses\Image.cs" />
-    <Compile Include="Models\Responses\Kernel.cs" />
-    <Compile Include="Models\Responses\Key.cs" />
-    <Compile Include="Models\Responses\Network.cs" />
-    <Compile Include="Models\Responses\Pagination.cs" />
-    <Compile Include="Models\Responses\Region.cs" />
-    <Compile Include="Models\Responses\Size.cs" />
-    <Compile Include="Models\Responses\Tag.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Responses\DropletUpgrade.cs" />
+    <PackageReference Include="NETStandard.Library">
+      <Version>1.6</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Sdk">
+      <Version>1.0.0-alpha-20161104-2</Version>
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>9.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="RestSharp.NetCore">
+      <Version>105.2.3</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
