--- a/DigitalOcean.API/DigitalOcean.API.nuspec
+++ b/DigitalOcean.API/DigitalOcean.API.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>DigitalOcean.API</id>
-    <version>2.4.0</version>
+    <version>3.0.0</version>
     <authors>DigitalOcean.API</authors>
     <owners>DigitalOcean.API</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,7 +10,10 @@
     <projectUrl>https://github.com/trmcnvn/DigitalOcean.API</projectUrl>
     <iconUrl>http://i.imgur.com/llqIpX6.png</iconUrl>
     <description>.NET wrapper of the DigitalOcean API</description>
-    <releaseNotes>Added CDN Endpoint and Certificate support (@Nicholi)</releaseNotes>
+    <releaseNotes>
+      Breaking: Changed DomainRecord's `TTL` property to `Ttl`.
+      Breaking: Changed UpdateCdnEndpoint's `TTL` property to `Ttl`.
+    </releaseNotes>
     <copyright>2019</copyright>
     <tags>DigitalOcean API</tags>
     <repository type="git" url="https://github.com/trmcnvn/DigitalOcean.API" />
