--- a/DigitalOcean.API/DigitalOcean.API.nuspec
+++ b/DigitalOcean.API/DigitalOcean.API.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>DigitalOcean.API</id>
-    <version>3.0.0</version>
+    <version>3.1.0</version>
     <authors>DigitalOcean.API</authors>
     <owners>DigitalOcean.API</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,8 +11,9 @@
     <iconUrl>http://i.imgur.com/llqIpX6.png</iconUrl>
     <description>.NET wrapper of the DigitalOcean API</description>
     <releaseNotes>
-      Breaking: Changed DomainRecord's `TTL` property to `Ttl`.
-      Breaking: Changed UpdateCdnEndpoint's `TTL` property to `Ttl`.
+      - Support for Account API (@Nicholi)
+      - Support for Projects API (@Nicholi)
+      - Support for Snapshots API (@Nicholi)
     </releaseNotes>
     <copyright>2019</copyright>
     <tags>DigitalOcean API</tags>
