--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,5 +16,5 @@ jobs:
       - run: dotnet test DigitalOcean.API.Tests/ --no-build --configuration Release
       - run: dotnet nuget push **/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
         continue-on-error: true
-      - run: dotnet nuget push DigitalOcean.API/ -k ${{ secrets.GITHUB_API_TOKEN }} -s https://nuget.pkg.github.com/trmcnvn/index.json
+      - run: dotnet nuget push **/*.nupkg -k ${{ secrets.GITHUB_API_TOKEN }} -s https://nuget.pkg.github.com/trmcnvn/index.json
         continue-on-error: true
