--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/release'
       - run: |
           choco install nuget.commandline
-          nuget sources add -name gpr -source https://nuget.pkg.github.com/trmcnvn/index.json -username trmcnvn -password ${{ secrets.GITHUB_API_TOKEN }}
+          nuget sources add -name gpr -source https://nuget.pkg.github.com/trmcnvn/index.json -username trmcnvn -password ${{ secrets.GITHUB_TOKEN }}
           nuget push release-files/*.nupkg -source gpr
         if: github.event_name == 'push' && github.ref == 'refs/heads/release'
