--- a/DigitalOcean.Clients.Tests/DigitalOcean.Clients.Tests.csproj
+++ b/DigitalOcean.Clients.Tests/DigitalOcean.Clients.Tests.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DigitalOcean.Clients\DigitalOcean.Clients.csproj" />
+      <ProjectReference Include="..\DigitalOcean.Shared.WebApplicationExtensions\DigitalOcean.Shared.WebApplicationExtensions.csproj" />
     </ItemGroup>
 
 </Project>
